<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.android.quizzd.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/name_edit_text_view" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            style="@style/HeaderTextStyle"
            android:text="@string/question_1" />

        <EditText
            android:id="@+id/answer_one_edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/answer_here" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/question_2" />



            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_button_view_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_answer_1" />

                <RadioButton
                    android:id="@+id/radio_button_view_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/question_two_answer_2" />

                <RadioButton
                    android:id="@+id/radio_button_view_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/question_two_answer_3" />

                <RadioButton
                    android:id="@+id/radio_button_view_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/question_two_answer_4" />
            </RadioGroup>



        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/question_3" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/checkbox_view_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_three_answer_1"/>

            <CheckBox
                android:id="@+id/checkbox_view_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_three_answer_2"
                android:layout_below="@id/checkbox_view_one" />

            <CheckBox
                android:id="@+id/checkbox_view_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_three_answer_3"
                android:layout_below="@id/checkbox_view_two" />

            <CheckBox
                android:id="@+id/checkbox_view_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_three_answer_4"
                android:layout_below="@id/checkbox_view_three" />

        </RelativeLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/question_4" />

        <EditText
            android:id="@+id/answer_four_edit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/answer_here_2" />

        <!--<TextView-->
            <!--android:id="@+id/results_text_view"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/final_results" />-->


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit_button_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="8dp"
                android:onClick="submitResults"
                android:text="@string/submit_button" />
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="200dp" />
    </LinearLayout>

</ScrollView>